<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:title="@string/ordena_o_da_lista">
        <menu>
            <item
                android:id="@+id/ordenacaoID"
                android:orderInCategory="100"
                android:title="@string/ordenar_por_id"
                android:checkable="true"
                android:icon="@drawable/ic_baseline_format_list_numbered_24"
               />

            <item
                android:id="@+id/ordenacaoAnotacaoDSC"
                android:orderInCategory="100"
                android:title="@string/ordenar_por_anota_o_mais_antiga"
                android:checkable="true"
                android:icon="@drawable/ic_baseline_expand_more_24"
                />
            <item
                android:id="@+id/ordenacaoAnotacaoASC"
                android:orderInCategory="100"
                android:title="@string/ordenar_por_anota_o_mais_recente"
                android:checkable="true"
                android:icon="@drawable/ic_baseline_expand_less_24"
                />

        </menu>
    </item>

    <item android:title="@string/edi_o_de_comportamentos">
        <menu>
            <item
                android:id="@+id/edit_comportamento_lote"
                android:orderInCategory="100"
                android:title= "@string/alterar_comportamentos_deste_lote"
                android:icon="@drawable/cow_white"/>
        </menu>
    </item>

    <item android:title="@string/voltar">
        <menu>
            <item
                android:id="@+id/voltar"
                android:orderInCategory="100"
                android:title="@string/voltar_lista_de_lotes"
                android:icon="@drawable/ic_baseline_arrow_back_ios_24"/>
        </menu>
    </item>
</menu>